Kubernetes/cas-node-1-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cas-node-1
  labels:
    suite: ehcos
    app: cas-balanced
spec:
  replicas: 1
  template:
    metadata:
      labels:
        suite: ehcos
        app: cas-balanced
        name: cas-node-1
    spec:
      containers:
      - name: cas-node-1
        image: pocehcoscloudcr-on.azurecr.io/cas-module-k8s-1:v4.3-cloud
        imagePullPolicy: Always
        resources:
          requests:
            memory: "1Gi"
            cpu: "400m"
          limits:
            memory: "1Gi"
        readinessProbe:
          httpGet:
            path: /cas
            port: 8080
            scheme: HTTP
          timeoutSeconds: 2
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /cas
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 40
          timeoutSeconds: 2
          periodSeconds: 10
        ports:
        - containerPort: 8080
        - containerPort: 41001
        - containerPort: 41002
      imagePullSecrets:
        - name: ehcoscrsecret
