Kubernetes/ehcos-bpm-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ehcos-bpm-dep
  labels:
    suite: ehcos
    app: bpm
spec:
  replicas: 2
  template:
    metadata:
      labels:
        suite: ehcos
        app: bpm
    spec:
      containers:
      - name: bpm-module
        image: pocehcoscloudcr-on.azurecr.io/bpm-module:v4.3-cloud
        imagePullPolicy: Always
        resources:
          requests:
            memory: "1Gi"
            cpu: "400m"
          limits:
            memory: "1Gi"
        readinessProbe:
          httpGet:
            path: /ehcs-workflow-server-jbpm
            port: 8080
            scheme: HTTP
          timeoutSeconds: 2
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /ehcs-workflow-server-jbpm
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          timeoutSeconds: 2
          periodSeconds: 10
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: ehcoscrsecret
