Kubernetes/ehcos-cas-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ehcos-cas-dep
  labels:
    #suite: ehcos
    app: cas
spec:
  replicas: 1
  template:
    metadata:
      labels:
        suite: ehcos
        app: cas
    spec:
      containers:
      - name: cas-module
        image: pocehcoscloudcr-on.azurecr.io/cas-module:v4.3-cloud
        imagePullPolicy: Always
        resources:
          requests:
            memory: "1Gi"
            cpu: "400m"
          limits:
            memory: "1Gi"
        readinessProbe:
          httpGet:
            path: /cas
            port: 8080
            scheme: HTTP
          timeoutSeconds: 2
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /cas
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 40
          timeoutSeconds: 2
          periodSeconds: 10
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: ehcoscrsecret
