Kubernetes/ehcos-ehcs-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ehcos-ehcs-dep
  labels:
    suite: ehcos
    app: ehcs
spec:
  replicas: 2
  template:
    metadata:
      labels:
        suite: ehcos
        app: ehcs
    spec:
      volumes:
      - name: ehcos-volume
        persistentVolumeClaim:
         claimName: ehcos-pvc
      containers:
      - name: ehcs-module
        image: pocehcoscloudcr-on.azurecr.io/ehcs-module:v4.3-cloud
        imagePullPolicy: Always
        resources:
          requests:
            memory: "2.2Gi"
            cpu: "400m"
          limits:
            memory: "2.2Gi"
        readinessProbe:
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 100
          timeoutSeconds: 5
          periodSeconds: 10
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/share"
          name: ehcos-volume
      imagePullSecrets:
        - name: ehcoscrsecret
