Kubernetes/ehcos-ehempi-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ehcos-ehempi-dep
  labels:
    suite: ehcos
    app: ehempi
spec:
  replicas: 2
  template:
    metadata:
      labels:
        suite: ehcos
        app: ehempi
    spec:
      volumes:
      - name: ehcos-azure-file
        persistentVolumeClaim:
          claimName: ehcos-pvc
      containers:
      - name: ehempi-module
        image: pocehcoscloudcr-on.azurecr.io/ehempi-module:v4.3-cloud
        imagePullPolicy: Always
        resources:
          requests:
            memory: "1.5Gi"
            cpu: "400m"
          limits:
            memory: "1.5Gi"
        readinessProbe:
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 70
          timeoutSeconds: 5
          periodSeconds: 10
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/share"
          name: ehcos-azure-file
      imagePullSecrets:
        - name: ehcoscrsecret
