Kubernetes/ehcos-ehhis-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ehcos-ehhis-dep
  labels:
    suite: ehcos
    app: ehhis
spec:
  replicas: 2
  template:
    metadata:
      labels:
        suite: ehcos
        app: ehhis
    spec:
      volumes:
      - name: ehcos-volume
        persistentVolumeClaim:
         claimName: ehcos-pvc
      containers:
      - name: ehhis-module
        image: pocehcoscloudcr-on.azurecr.io/ehhis-module:v4.3-cloud
        imagePullPolicy: Always
        resources:
          requests:
            memory: "1.68Gi"
            cpu: "400m"
          limits:
            memory: "1.68Gi"
        readinessProbe:
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 70
          timeoutSeconds: 5
          periodSeconds: 10
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/share"
          name: ehcos-volume
      imagePullSecrets:
        - name: ehcoscrsecret
