Kubernetes/ehcos-mule-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ehcos-mule-dep
  labels:
    suite: ehcos
    app: mule
spec:
  replicas: 2
  template:
    metadata:
      labels:
        suite: ehcos
        app: mule
    spec:
      containers:
      - name: mule
        image: pocehcoscloudcr-on.azurecr.io/mule-node-3.4.0:v4.3-cloud
        imagePullPolicy: Always
        resources:
          requests:
            memory: "1.5Gi"
            cpu: "400m"
          limits:
            memory: "1.5Gi"
        readinessProbe:
          tcpSocket:
            port: 63080
          timeoutSeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 63080
          initialDelaySeconds: 60
          timeoutSeconds: 5
          periodSeconds: 10
        ports:
        - containerPort: 63080
      - name: activemq
        image: pocehcoscloudcr-on.azurecr.io/activemq-node:v4.3-cloud
        imagePullPolicy: Always
        resources:
          requests:
            memory: "0.4Gi"
            cpu: "100m"
          limits:
            memory: "0.4Gi"
        ports:
        - containerPort: 8161
        - containerPort: 61616
        - containerPort: 5672
        - containerPort: 61613
        - containerPort: 1883
        - containerPort: 61614 
      imagePullSecrets:
        - name: ehcoscrsecret
