Kubernetes/cas-balancing-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: cas-balancing-svc
  labels:
    suite: ehcos
    app: cas-balanced
spec:
  ports:
    - port: 80
      targetPort: 8080
  #selecciona cualquier nodo en cas-balanced
  selector:
    app: cas-balanced
