Kubernetes/ehcos-bpm-extlb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ehcos-external-bpm-svc
  labels:
    app: bpm
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: bpm
  type: LoadBalancer
