Kubernetes/ehcos-bpm-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ehcos-bpm-svc
  labels:
    suite: ehcos
    app: bpm
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: bpm
