Kubernetes/ehcos-ehcs-extlb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ehcos-external-ehcs-svc
  labels:
    app: ehcs
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: ehcs
  type: LoadBalancer
