Kubernetes/ehcos-ehcs-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ehcos-ehcs-svc
  labels:
    suite: ehcos
    app: ehcs
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: ehcs
