Kubernetes/ehcos-ehempi-extlb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ehcos-external-ehempi-svc
  labels:
    app: ehempi
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: ehempi
  type: LoadBalancer
