Kubernetes/ehcos-ehempi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ehcos-ehempi-svc
  labels:
    suite: ehcos
    app: ehempi
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: ehempi
