Kubernetes/ehcos-ehhis-extlb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ehcos-external-ehhis-svc
  labels:
    app: ehhis
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: ehhis
  type: LoadBalancer
