Kubernetes/ehcos-ehhis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ehcos-ehhis-svc
  labels:
    suite: ehcos
    app: ehhis
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: ehhis
