Kubernetes/ehcos-extlb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ehcos-external-loadbalancer-svc
  namespace: kube-system
  labels:
    suite: ehcos
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    k8s-app: nginx-ingress-controller
  type: LoadBalancer
