Kubernetes/ehcos-mule-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ehcos-mule-svc
  labels:
    suite: ehcos
    app: mule
spec:
  ports:
    - port: 63080
      targetPort: 63080
  selector:
    app: mule
