Kubernetes/ehcos-bpm-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ehcos-bpm-ingress
  labels:
    suite: ehcos
    app: bpm-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  backend:
    serviceName: ehcos-bpm-svc
    servicePort: 80
  rules:
  - http:
      paths:
      - path: /ehcs-workflow-server-jbpm
        backend:
          serviceName: ehcos-bpm-svc
          servicePort: 80
