Kubernetes/ehcos-ehcs-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ehcos-ehcs-ingress
  labels:
    suite: ehcos
    app: ehcs-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  backend:
    serviceName: ehcos-ehcs-svc
    servicePort: 80
  rules:
  - http:
      paths:
      - path: /ehCS-ui
        backend:
          serviceName: ehcos-ehcs-svc
          servicePort: 80
